--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -38,19 +38,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="heart.html">Heart Disease<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://chronic-heart.herokuapp.com/">Heart Disease<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="kidney.html">Kidney Disease</a>
+              <a class="nav-link" href="https://chronic-kidney.herokuapp.com/">Kidney Disease</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="diabetes.html">Diabetes</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="liver.html">Liver Diease</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="cancer.html">Cancer</a>
+              <a class="nav-link" href="https://chro-diab.herokuapp.com/">Diabetes</a>
             </li>
           </ul>
         </div>
